sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  var v:Int=getValeur(i)
  var a:Int=0
  for (i<-1 to lgr-1) {
    for (j <- (1 to i+1).reverse) {
      if (plusPetit(v,j-1)) { copie(j-1,j);a+=1}
    }
   	copie(v,a)
 	}
}